# ryklys

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  ServiceLocator.h  docker-compose.yml  docker-entrypoint.sh  main.cpp
.github/workflows/: ci.yml
backend/: .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  README.md  RedisPool.h  ServiceLocator.h  env.example  init.sql  libpqxxConfig.cmake  main.cpp
backend/.github/workflows/: ci.yml
backend/config/: WebRTCConfig.h
backend/database/database_repositories/: ChatRepository.h  StreamRepository.cpp  StreamRepository.h  UserRepository.h
backend/database/queries/: 003_create_streams.sql  004_create_stream_messages.sql
backend/pg-connection-pool/: pgPool.cpp
backend/recordings/bob/: bob.m3u8  bob66.ts  bob67.ts  bob68.ts  bob69.ts  bob70.ts  bob71.ts  bob76.ts  bob77.ts  bob78.ts  bob79.ts  bob80.ts  bob81.ts
backend/routes/health-route/: HealthRoutes.cpp  HealthRoutes.h
backend/routes/stream-route/: StreamerRoutes.cpp  StreamerRoutes.h
backend/routes/test-route/: TestRoutes.cpp
backend/routes/user-route/: UserRoutes.cpp  UserRoutes.h
backend/routes/viewer-route/: VIewerRoutes.cpp  VIewerRoutes.h
backend/services/: ChatRelay.h  RedisClient.h  SegmentUploader.h  StreamCleanup.h  ViewerRegistry.h
backend/stream-pocket/: CMakeLists.txt  StorageConfig.h  main.cpp
backend/stream-pocket/routes/health-route/: HealthRoutes.cpp  HealthRoutes.h
backend/stream-pocket/routes/segments-route/: SegmentsRoutes.cpp  SegmentsRoutes.h
backend/types/: AuthenticatedUser.h  Stream.h  User.h
backend/zvejys-rest-api/: Connection.h  HttpConnection.cpp  HttpRequest.h  HttpResponse.h  RouteNode.h  WebSocketConnection.h  ZvejysServer.cpp  ZvejysServer.h
backend/zvejys-rest-api/include/PhamPhiLong_Radix-Tree/: radix_tree_node.h
config/: EnvConfig.h
database/database_repositories/: Repository.h  UserRepository.cpp  UserRepository.h
database/queries/: 001_create_users.sql  002_create_channels.sql
frontend/: .env  FEATURES_SETUP.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/.github/workflows/: ci.yml
frontend/src/: main.tsx
frontend/src/app/: App.tsx  provider.tsx  router.tsx
frontend/src/app/routes/: landing.tsx  not-found.tsx
frontend/src/app/routes/app/: root.tsx
frontend/src/app/routes/app/me/: MePage.tsx
frontend/src/app/routes/app/stream-view/: BrowseStreamsPage.tsx
frontend/src/app/routes/app/streamer-dashboard/: streamer-dashboard.tsx
frontend/src/app/routes/app/test/: TestStream.tsx
frontend/src/app/routes/auth/: LoginPage.tsx  RegisterPage.tsx  login.tsx  styles.css
frontend/src/components/: ChatPanel.tsx  RequireAuth.tsx
frontend/src/components/errors/: main.tsx
frontend/src/components/layouts/: auth-layout.tsx
frontend/src/components/ui/form/: form.tsx  input.tsx  label.tsx  select.tsx
frontend/src/components/ui/navbar/: navbar.tsx
frontend/src/config/: env.ts  paths.ts
frontend/src/features/: ARCHITECTURE.md
frontend/src/features/analytics/: index.ts
frontend/src/features/analytics/components/: index.ts
frontend/src/features/analytics/hooks/: index.ts
frontend/src/features/channel/: index.ts
frontend/src/features/channel-chat/: index.ts
frontend/src/features/channel-chat/components/: index.ts
frontend/src/features/channel-chat/hooks/: index.ts
frontend/src/features/channel/components/: index.ts
frontend/src/features/channel/hooks/: index.ts
frontend/src/features/discovery/: index.ts
frontend/src/features/discovery/components/: index.ts
frontend/src/features/discovery/hooks/: index.ts
frontend/src/features/follow/: index.ts
frontend/src/features/follow/components/: index.ts
frontend/src/features/follow/hooks/: index.ts
frontend/src/features/recent-actions/components/: recent-dashboard.tsx
frontend/src/features/stream/: index.ts
frontend/src/features/stream-settings/: index.ts
frontend/src/features/stream-settings/components/: AudioStreamMixer.tsx  StreamCaptureEditPopup.css  StreamCaptureEditPopup.tsx  StreamControlRow.tsx  StreamQuickActionGrid.tsx  StreamVideo.tsx  index.ts
frontend/src/features/stream-settings/hooks/: index.ts
frontend/src/features/stream-viewing/components/: StreamView.tsx
frontend/src/features/stream/components/: LiveStream.tsx  Scenes.ts  ShitTestStreamingApp.jsx  index.ts
frontend/src/features/stream/hooks/: index.ts  useLiveStream.tsx
frontend/src/features/stream/models/: AudioCapture.ts  Popup.ts  PopupAnimation.ts  PopupElement.ts  PopupManager.ts  Scene.ts  VisualCapture.ts
frontend/src/features/stream/utils/: StreamHelpers.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api-client.ts  auth.tsx  react-query.ts
frontend/src/types/: api.ts
pg-connection-pool/: pgPool.cpp  pgPool.h
routes/TestRoute/: TestRoutes.cpp  TestRoutes.h
routes/UserRoute/: UserRoutes.cpp  UserRoutes.h
types/: User.h
zvejys-rest-api/: Connection.h  HttpConnection.cpp  HttpConnection.h  HttpMethod.h  HttpRequest.h  HttpResponse.h  RouteNode.h  WebSocketConnection.h  WebSocketFrame.h  WebSocketUtils.h  ZvejysServer.cpp  ZvejysServer.h
zvejys-rest-api/cors/: Cors.cpp  Cors.h
zvejys-rest-api/include/: trie.h
zvejys-rest-api/include/PhamPhiLong_Radix-Tree/: radix_tree.h  radix_tree_node.h
zvejys-rest-api/types/: AuthenticatedUser.h
zvejys-rest-api/utils/: Crypto.h  Env.h  JsonWebToken.h  PasswordHash.h  Validation.h
